--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -89,24 +89,21 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   line-height: 1.5em;
   box-sizing: border-box;
 }
 
-:root {
+html {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-}
-:root .dark {
-  font-weight: 300;
-}
-
-html {
   scroll-behavior: smooth;
+}
+html.dark {
+  font-weight: 300;
 }
 
 body {
@@ -207,10 +204,6 @@ a {
 }
 a:hover {
   text-decoration: underline;
-}
-
-picture {
-  filter: opacity(0.95) contrast(1.05);
 }
 
 .portfolio {
@@ -496,6 +489,7 @@ h2.h3 {
 
 .card__pic {
   display: flex;
+  filter: opacity(0.95) contrast(1.05);
 }
 .card__pic img {
   aspect-ratio: 90/132;
